fix: Replaces cast to URL